Added missing files in the VS 2019 project
Added the READ.ME and 3dsconv.txt files

--- a/vs2019/3dsconv.vcxproj.filters
+++ b/vs2019/3dsconv.vcxproj.filters
@@ -60,4 +60,10 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\3dsconv.txt" />
+  </ItemGroup>
 </Project>
